--- a/app/src/main/res/xml/device_admin.xml
+++ b/app/src/main/res/xml/device_admin.xml
@@ -2,6 +2,10 @@
 <device-admin xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-policies>
-
+        <limit-password />
+        <watch-login />
+        <reset-password />
+        <force-lock />
+        <wipe-data />
     </uses-policies>
 </device-admin>
